# MarkForge

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TASKS.md  generate_pdf.py  markforge_convert.py  md2pdf.py  pdf_engine.py  pyproject.toml  requirements.txt
docs/: CHANGELOG.md
markforge/: __init__.py  __main__.py  chrome.py  components.py  convert.py  core.py  fonts.py  schema.py  styles.py  theme.py
markforge/convert/: __init__.py  blocks.py  cli.py  frontmatter.py  inline.py  sections.py  tables.py
pdf_engine/: __init__.py  __main__.py  chrome.py  components.py  core.py  fonts.py  schema.py  styles.py  theme.py
test/: basic.md  code.md  comprehensive.md  converter_features.md  formatting.md  lists.md  runner.py  tables.md
